<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HW4</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnstart">启动</string>
    <string name="btnsure">确定</string>
    <string name="btnstop">停止</string>
    <string name="plsinputnum">请输入0~100之间的数</string>
    <string name="plsinputsth">不可为空</string>
    <string-array name="namelist">
        <item >ann</item>
        <item >jason</item>
        <item >bob</item>
        <item >john</item>
        <item >procelana</item>
        <item >vvv</item>
        <item >ddd</item>
        <item >fff</item>
        <item >hhh</item>
        <item >s</item>
        <item >y</item>
        <item >m</item>
        <item >qqq</item>
    </string-array>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btnback">back</string>

</resources>
