<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="number"
        android:hint="@string/plsinputnum">

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnstart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnstart" 
            android:onClick="startMethod"/>

        <Button
            android:id="@+id/btnsure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnsure" 
            android:onClick="sureMethod"/>

        <Button
            android:id="@+id/btnstop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnstop" 
            android:onClick="stopMethod"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        />
    <!-- android:max="100" -->

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="" />

    <Button
        android:id="@+id/btnback2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnback" 
        android:onClick="back"/>

</LinearLayout>
